--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -5,6 +5,8 @@
   z-index: 2;
   border-bottom: 1px solid var(--lightGrey);
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.025);
+  position: fixed;
+  width: 100%;
 }
 
 .Nav--Container {
