--- a/src/components/BackgroundVideo.module.css
+++ b/src/components/BackgroundVideo.module.css
@@ -7,12 +7,14 @@
  */
 }
 
+.ancho_video > video{
+  width: 100% !important;
+}
+.ancho_video  {
+  border: 1px solid yellow !important;
+}
 /* Style the video: 100% width and height to cover the entire window */
-.Video {
-    width: 100%;
-    height: 100%;
-  }
-  
+
   /* Add some content at the bottom of the video/page */
   .Content {
     position: absolute;
@@ -57,3 +59,23 @@
     margin: 15px auto;
     border: #f1f1f1 1px solid;
   }
+video{
+  width: 100%;
+}
+
+@media (max-width: 600px) {
+   video{
+      margin-top: 70px;
+  }
+  .Video {
+    width: auto;
+    height: 100%;
+  }
+  
+  .BackgroundVideo-module--Content--Y6ZFK{
+    display: none;
+  }
+}
+
+
+
