--- a/src/components/ProgramasDeEstudio.css
+++ b/src/components/ProgramasDeEstudio.css
@@ -57,9 +57,11 @@
 }
 @media screen and (max-width: 500px) {
   .card {
-    width: 100%;
+    width: 100% !important;
+    margin: 12px 30px;
   }
 }
+
 
 .front,
 .back {
