--- a/src/components/globalStyles.css
+++ b/src/components/globalStyles.css
@@ -69,6 +69,7 @@ h5,
 h6 {
   margin: 0;
   margin-bottom: 0.5em;
+  color: #f0f0f0 !important ;
 }
 
 pre {
@@ -237,4 +238,42 @@ blockquote {
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+@media (min-width: 600px){
+  .h1{
+    margin-left: 65px !important;
+  }
+}
+
+.h1{
+  margin-top: 20px;
+  margin-left: 20px;
+  font-size: 35px;
+  color: #fba905 !important;
+}
+.h2{
+  font-size: 25px;
+  color: #fba905 !important;
+}
+.tabs{
+  text-align: justify;
+}
+.texto {
+  display: block;
+  }
+.texto img{
+  display: flex;
+  float: right;
+}
+.center{
+  text-align: center;
+}
+.line{
+  width: 200px;
+  height: 2px;
+  background: #fba905;
+  border-bottom: 1px solid #f1f1f1;
+  display: block;
+  margin: -10px 0 30px 0;
 }
