--- a/src/components/globalStyles.css
+++ b/src/components/globalStyles.css
@@ -340,3 +340,15 @@ width: 95%;
   width: 180px;
   padding: 5px;
 }
+
+.carousel_home h1{
+  font-weight: 800;
+}
+.carousel_home p{
+  font-weight: 800;
+  font-size: 20px;
+}
+p{
+  font-size: 18px !important;
+  color: #fff;
+}
